src/pages/navbar/NavBar.css
.navbar{
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 1.2rem;
}

.logo {
    width: 50px;
    height: 50px;
}

#nav-links {
    display: flex;
    justify-content: end;
    color: red;
}

#brand {
    font-family: 'Cookie', cursive;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    color: #0FA98D;
}

